feat(building-mass): 集成建筑物体量系统并优化调试渲染
- 标记 BuildingMassAssembly 为废弃类，使用 BuildingMassComposition 替代
- 集成 MultiLayerRhythmProcessor 处理多层立面节奏关联
- 添加 BuildingMassSystemTest 测试命令 /formacraft_test_mass
- 实现 PlanProgramCompiler 支持 PlanSkeleton 模式编译
- 创建 DebugOverlayRegistry 统一管理调试渲染器
- 在 StructuralSkeletonToExecutablePlanConverter 中集成 RoofSocketGenerator
- 通过系统属性控制 BuildingMass 路径启用状态
- 优化 RoofPlateGenerator 添加 V3 生成器扩展点
- 移除未使用的 MassToSkeletonDeriver 导入
- 简化调试渲染器中的空值检查逻辑